@@ -1,3 +1,9 @@
+r19 ====================================================================
+- исправлен расчёт значений в методе MixGenGradGen.get_next_value()
+- исправлен метод BufferedGradGen.init_attrs(): если передан параметр
+  data, поле clearBuf принудительно устанавливается в False, т.к.
+  в этом случае методу reset() нет необходимости очищать буфер
+
 r18 ====================================================================
 - исправлен метод GradPosition.set_length() - при пересчёте значения
   length из секунд значение не округлялось
